kube/karin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karin
spec:
  selector:
    matchLabels:
      app: karin
  replicas: 1
  template:
    metadata:
      labels:
        app: karin
    spec:
      containers:
      - name: court-bot
        image: discord-court-bot:1.0
