kube/ubuntu-debugger.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-debugger
  labels:
    name: ubuntu-debugger
spec:
  containers:
  - name: ubuntu-debugger
    image: docker.io/ubuntu:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    command: [ "/bin/bash", "-c", "--" ]
    args: [ "while true; do sleep 30; done;" ]
