kube/hugo-chat-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugo-chat-frontend-service
spec:
  selector:
    name: hugo-chat-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
