kube/local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hugo-chat.nilstrieb.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hugo-chat-frontend-service
                port:
                  number: 8080
    - host: bisect-rustc.nilstrieb.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: cargo-bisect-rustc-service
                port:
                  number: 80
